# oscar-cli

./: Cargo.toml  LICENSE  README.md  converted_list.txt  gen_video.sh
benches/: mod.rs  resize.rs
check/: Cargo.toml
check/src/: main.rs
convert/: Cargo.toml
convert/src/: cli.rs  main.rs  mono.rs  mono_tar.rs  stereo.rs  utils.rs
jpeg-encoder/: Cargo.toml
jpeg-encoder/src/: consts.rs  lib.rs  transform.rs
jpeg-encoder/tests/: mod.rs
oscar-utils/: Cargo.toml
oscar-utils/benches/: mod.rs
oscar-utils/src/: lib.rs  load_frames.rs
pnm2flif/: Cargo.toml
pnm2flif/src/: convert.rs  main.rs  verify.rs
scripts/: attributes.txt  convert.sh  gen_video.sh  mono_list.txt  stereo_list.txt
src/: bayer.rs  conversions.rs  convert.rs  convert_mono.rs  convert_stereo.rs  ffi.rs  flif.rs  lib.rs  main.rs  opt.rs  utils.rs
src/convert/: cli.rs  mod.rs  mono.rs  stereo.rs  utils.rs
src/flif/: ffi.rs  mod.rs  util.rs
tests/: mod.rs
