[package]
name = "oscar-cli"
version = "0.1.0"
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]

[dependencies]
num_cpus = "1"
pbr = "1"
png = "0.12"
structopt = "0.2"
libc = { version = "0.2", optional = true }

# this condition does not work currently
[target.'cfg(not(feature = "libflif"))'.dependencies]
flif = { git = "https://github.com/newpavlov/flif.rs", branch="pixels_rework"}
memmap = "0.6"

[features]
libflif = ["libc"]
