[package]
name = "oscar-utils"
version = "0.1.0"
authors = ["newpavlov <newpavlov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
png = "0.13"
tempfile = "3"
flif = "0.3"
structopt = "0.2"
structopt-derive = "0.2"
rayon = "1"
# rayon support, see https://github.com/mitsuhiko/indicatif/pull/69
indicatif = { git = "https://github.com/willcrichton/indicatif", features = ["with_rayon"] }
memmap = "0.7"
jpeg-encoder = { path = "jpeg-encoder" }
