[package]
name = "check"
version = "0.1.0"
authors = ["newpavlov <newpavlov@gmail.com>"]
edition = "2018"
description = "Check equality of PNM and RGBA FLIF frames"
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.2"
structopt-derive = "0.2"
rayon = "1"
indicatif = { version = "0.10", features = ["with_rayon"] }
oscar-utils = { path = "../oscar-utils" }
