[package]
name = "pnm2flif"
version = "0.1.0"
authors = ["newpavlov <newpavlov@gmail.com>"]
edition = "2018"
description = "Convert PNM files collected by OS:Car to RGBA FLIF"
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.2"
structopt-derive = "0.2"
rayon = "1"
tempfile = "3"
memmap = "0.7"
indicatif = { version = "0.10", features = ["with_rayon"] }
oscar-utils = { path = "../oscar-utils" }
